# quickfeed

./: .gitignore  .pylintrc  README.md  alembic.ini  config.json  pyproject.toml  setup.cfg
migrations/: env.py
migrations/versions/: 084a90479515_initial_migration.py  105fc26a8c47_add_article_lists.py  9da63d42cc45_add_default_category.py  ec3d06a248de_add_order_to_category.py
quickfeed/: api.py  basic_auth.py  jobs.py  models.py  routes.py  run_server.py  server.py  utils.py
scripts/: autofix  linting  run_server.sh  typing
scripts/hooks/: pre_push_hook.py
static/: style.css
templates/: add_category.html  add_feed.html  categories.html  category_details.html  delete_category.html  delete_feed.html  feed_details.html  feeds.html  head.html  index.html  sidebar.html
