[tool.poetry]
name = "quickfeed"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
feedparser = "^6.0.11"
fastapi = "^0.110.2"
typing-extensions = "^4.11.0"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.29"
apscheduler = "^3.10.4"
jinja2 = "^3.1.3"
python-multipart = "^0.0.9"
alembic = "^1.13.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
pylint = "^3.1.0"
gitpython = "^3.1.43"
autoflake = "^2.3.1"
autopep8 = "^2.1.0"
colorama = "^0.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
